Update unit test for new AI-Extension interfaces